# lite-strtab

./: LICENSE  README.MD  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: rust.yml
src/: AGENTS.md  Cargo.toml
src/.cargo/: verify.ps1  verify.sh
src/lite-strtab/: Cargo.toml  README.MD
src/lite-strtab/benches/data/: ApiUrls.zst  EnvKeys.zst
src/lite-strtab/benches/my_benchmark/: main.rs
src/lite-strtab/src/: allocator.rs  builder.rs  error.rs  lib.rs  table.rs
src/lite-strtab/src/types/: mod.rs  offset.rs  string_id.rs  string_index.rs
src/lite-strtab/tests/: wrapper_types.rs
